; ModuleID = '/home/carl/AnghaBench/fastdfs/client/extr_storage_client.c_storage_modify_by_filename.c'
source_filename = "/home/carl/AnghaBench/fastdfs/client/extr_storage_client.c_storage_modify_by_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EPERM = common dso_local global i32 0, align 4
@FDFS_UPLOAD_BY_FILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @storage_modify_by_filename(i32* %0, i32* %1, i8* %2, i32 %3, i8* %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca %struct.stat, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i8* %4, i8** %12, align 8
  store i8* %5, i8** %13, align 8
  %15 = load i8*, i8** %13, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %30, label %17

17:                                               ; preds = %6
  %18 = load i8*, i8** %13, align 8
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %30, label %22

22:                                               ; preds = %17
  %23 = load i8*, i8** %12, align 8
  %24 = icmp eq i8* %23, null
  br i1 %24, label %30, label %25

25:                                               ; preds = %22
  %26 = load i8*, i8** %12, align 8
  %27 = load i8, i8* %26, align 1
  %28 = sext i8 %27 to i32
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %25, %22, %17, %6
  %31 = load i32, i32* @EINVAL, align 4
  store i32 %31, i32* %7, align 4
  br label %65

32:                                               ; preds = %25
  %33 = load i8*, i8** %10, align 8
  %34 = call i64 @stat(i8* %33, %struct.stat* %14)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %47

36:                                               ; preds = %32
  %37 = load i64, i64* @errno, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %36
  %40 = load i64, i64* @errno, align 8
  br label %44

41:                                               ; preds = %36
  %42 = load i32, i32* @EPERM, align 4
  %43 = sext i32 %42 to i64
  br label %44

44:                                               ; preds = %41, %39
  %45 = phi i64 [ %40, %39 ], [ %43, %41 ]
  %46 = trunc i64 %45 to i32
  store i32 %46, i32* %7, align 4
  br label %65

47:                                               ; preds = %32
  %48 = getelementptr inbounds %struct.stat, %struct.stat* %14, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @S_ISREG(i32 %49)
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %54, label %52

52:                                               ; preds = %47
  %53 = load i32, i32* @EINVAL, align 4
  store i32 %53, i32* %7, align 4
  br label %65

54:                                               ; preds = %47
  %55 = load i32*, i32** %8, align 8
  %56 = load i32*, i32** %9, align 8
  %57 = load i32, i32* @FDFS_UPLOAD_BY_FILE, align 4
  %58 = load i8*, i8** %10, align 8
  %59 = load i32, i32* %11, align 4
  %60 = getelementptr inbounds %struct.stat, %struct.stat* %14, i32 0, i32 0
  %61 = load i32, i32* %60, align 4
  %62 = load i8*, i8** %12, align 8
  %63 = load i8*, i8** %13, align 8
  %64 = call i32 @storage_do_modify_file(i32* %55, i32* %56, i32 %57, i8* %58, i32* null, i32 %59, i32 %61, i8* %62, i8* %63)
  store i32 %64, i32* %7, align 4
  br label %65

65:                                               ; preds = %54, %52, %44, %30
  %66 = load i32, i32* %7, align 4
  ret i32 %66
}

declare dso_local i64 @stat(i8*, %struct.stat*) #1

declare dso_local i32 @S_ISREG(i32) #1

declare dso_local i32 @storage_do_modify_file(i32*, i32*, i32, i8*, i32*, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
